--- a/.github/workflows/ci-linux.yml
+++ b/.github/workflows/ci-linux.yml
@@ -33,6 +33,6 @@ jobs:
     - name: Upload generated project
       uses: actions/upload-artifact@v2
       with:
-        name: python-conda-minimal-project
-        path: python-conda-minimal-project/
+        name: generated-project
+        path: generated-project/
         if-no-files-found: error
